test/fail/associated_const.rs
#[objective::objective]
trait Test {
    const CONST: usize;
}

fn main() {}
